--- a/noticia.html
+++ b/noticia.html
@@ -14,9 +14,9 @@
         <p>Criação e implantação de uma casa usando IoT na Escola Dr.º Messias da Fonceca </p>
     </Header>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Notícia</a>
-        <a href="#">Contato</a>
+        <a href="https://marx-color.github.io/ProjetoCasa/index.html">Home</a>
+        <a href="https://marx-color.github.io/ProjetoCasa/noticia.html">Notícia</a>
+        <a href="https://marx-color.github.io/ProjetoCasa/contato.html">Contato</a>
     </nav>
    
     <main>
