correção de nome

--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
 <body>
     <Header>
         <h1>Projeto de Casa Inteligente</h1>
-        <p>Criação e implantação de uma casa usando IoT na Escola Dr.º Messias da Fonceca </p>
+        <p>Criação e implantação de uma casa usando IoT na Escola Dr.º Messias da Fonseca </p>
     </Header>
     <nav>
         <a href="https://marx-color.github.io/ProjetoCasa/index.html">Home</a>
