Mudança de rumo do Projeto
Adequação para a culminância

--- a/contato.html
+++ b/contato.html
@@ -4,23 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto IoT </title>
+    <title>Tecendo Palavras</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     <Header>
-        <h1>Projeto de Casa Inteligente</h1>
-        <p>Criação e implantação de uma casa usando IoT na Escola Dr.º Messias da Fonseca </p>
+        <h1>Projeto Tecendo Páginas</h1>
+        <p>Criação de uma página de poesias da E. E. Professor Geraldo Torrano  </p>
     </Header>
     <nav>
         <a href="https://marx-color.github.io/ProjetoCasa/index.html">Home</a>
-        <a href="https://marx-color.github.io/ProjetoCasa/noticia.html">Notícia</a>
-        <a href="https://marx-color.github.io/ProjetoCasa/contato.html">Contato</a>
+        <a href="https://marx-color.github.io/Cordel/">Cordel</a>
+        <a href="https://marx-color.github.io/ProjetoCasa/contato.html">Estudantes</a>
     </nav>
    
     <main>
-        Contato
+        <h2>Estudante:</h2>
+        <h3>Manhã</h3>
+        <p>	Nº	Nome	</P>
+            <p>	1	AGATHA VIEIRA DE SOUSA	</P>
+            <p>	2	ANA JULIA RIBEIRO COSTA	</P>
+            <p>	3	ANNA LAURA DA SILVEIRA VICENTE	</P>
+            <p>	4	ANA LARA DA SILVA SÁ	</P>
+            <p>	4	CAIO HENRIQUE FERNANDES	</P>
+            <p>	5	CARLOS EDUARDO DOS REIS GONÇALVES	</P>
+            <p>	7	ELOÁ CRISTINA DA SILVA BATISTA	</P>
+            <p>	8	EMILI VITORIA DA SILVA	</P>
+            <p>	9	EVELYM YASMIN CANDIDO	</P>
+            <p>	11	GABRIEL FERREIRA SILVA	</P>
+            <p>	11	GRAZIELA GOMES DA SILVA	</P>
+            <p>	12	GABRIEL HENRY DA ROCHA PRIMO	</P>
+            <p>	13	HAKELLY VITORYA MAIA DUTRA DA SILVA	</P>
+            <p>	14	ISABELLI PIMENTA SANTANA	</P>
+            <p>	16	JOÃO VITOR CIPRIANO DA SILVA	</P>
+            <p>	17	JHENIFER LAVÍNIA DA SILVA JANUARIO	</P>
+            <p>	17	JÚLIA EMILY CANDIDO	</P>
+            <p>	18	JOÃO PEDRO SILVERIO SALES	</P>
+            <p>	19	JÚLIA APARECIDA RAIMUNDO DE OLIVEIRA	</P>
+            <p>	22	KAUANY RAFAELA DE SOUZA COELHO	</P>
+            <p>	22	LUANA DA SILVA DE PADUA	</P>
+            <p>	23	KAYKY ALAN DA CRUZ ALVES	</P>
+            <p>	24	KELVIN DIOGO DE SOUZA RIBEIRO	</P>
+            <p>	24	MARIAH EDUARDA BARBOSA DOS SANTOS BATISTA	</P>
+            <p>	25	MILENA EDUARDA MACEDO	</P>
+            <p>	26	MARIA FERNANDA CAMILO BARBOSA	</P>
+            <p>	28	NOEMI VENÂNCIO PIMENTA	</P>
+            <p>	29	RAYANE EMANUELLE BATISTA DOS SANTOS	</P>
+            <p>	31	TAINÁ OLIVO FONSECA	</P>
+            <p>	32	THOMÁZ VINICIUS RIBEIRO DE CARVALHO	</P>
+            <p>	33	YAGO GABRIEL MARQUES PIRES	</P>
+            <p>	34	YASMIM RESENDE SIMÕES DE SOUZA	</P>
+            
+
     </main>
     <footer>
         <p>Desenvolvido por <a href="https://www.duarterc.eu.org/site/" target="_blank">Professor Reinaldo</a></p>
