--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto IoT </title>
+    <title>Tecendo Palavras</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     <Header>
-        <h1>Projeto de Casa Inteligente</h1>
-        <p>Criação e implantação de uma casa usando IoT na Escola Dr.º Messias da Fonseca </p>
+        <h1>Projeto Tecendo Páginas</h1>
+        <p>Criação de uma página de poesias da E. E. Professor Geraldo Torrano 
+        </p>
     </Header>
     <nav>
-        <a href="https://marx-color.github.io/ProjetoCasa/index.html">Home</a>
-        <a href="https://marx-color.github.io/ProjetoCasa/noticia.html">Notícia</a>
-        <a href="https://marx-color.github.io/ProjetoCasa/contato.html">Contato</a>
+        <a href="https://marx-color.github.io/ProjetoCasa/index.html">Sala</a>
+        <a href="https://marx-color.github.io/Cordel/">Cordel</a>
+        <a href="https://marx-color.github.io/ProjetoCasa/contato.html">Estudantes</a>
     </nav>
    
     <main>
-        Home
+        Sala
     </main>
     <footer>
         <p>Desenvolvido por <a href="https://www.duarterc.eu.org/site/" target="_blank">Professor Reinaldo</a></p>
