Alteração de link
Revisão do target="_blank"

--- a/contato.html
+++ b/contato.html
@@ -15,7 +15,7 @@
     </Header>
     <nav>
         <a href="https://marx-color.github.io/ProjetoCasa/index.html">Home</a>
-        <a href="https://marx-color.github.io/Cordel/">Cordel</a>
+        <a href="https://marx-color.github.io/Cordel/" target="_blank">Cordel</a>
         <a href="https://marx-color.github.io/ProjetoCasa/contato.html">Estudantes</a>
     </nav>
    
