--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </Header>
     <nav>
         <a href="https://marx-color.github.io/ProjetoCasa/index.html">Sala</a>
-        <a href="https://marx-color.github.io/Cordel/">Cordel</a>
+        <a href="https://marx-color.github.io/Cordel/">Cordel target="_blank"</a>
         <a href="https://marx-color.github.io/ProjetoCasa/contato.html">Estudantes</a>
     </nav>
    
