Inclusão final de turma
Não repetir o erro, só faça em um lugar o projeto.

--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
         <p>Criação de uma página de poesias da E. E. Professor Geraldo Torrano  </p>
     </Header>
     <nav>
-        <a href="https://marx-color.github.io/ProjetoCasa/index.html">Home</a>
+        <a href="https://marx-color.github.io/ProjetoCasa/index.html">Sala</a>
         <a href="https://marx-color.github.io/Cordel/" target="_blank">Cordel</a>
         <a href="https://marx-color.github.io/ProjetoCasa/contato.html">Estudantes</a>
     </nav>
@@ -55,9 +55,28 @@
             <p>	32	THOMÁZ VINICIUS RIBEIRO DE CARVALHO	</P>
             <p>	33	YAGO GABRIEL MARQUES PIRES	</P>
             <p>	34	YASMIM RESENDE SIMÕES DE SOUZA	</P>
-            
-
-    </main>
+        <h3>Tarde</h3>
+        <p>	Nº	Nome	</P>
+            <p>	1	ADONIAS DE SOUSA GUIMARÃES	</P>
+            <p>	2	ARTHUR GABRIEL PONCIANO DA SILVA	</P>
+            <p>	5	CARLOS ALEXANDRE REZENDE URSOLINO VIEITES	</P>
+            <p>	8	GABRIEL HENRIQUE DE SOUZA	</P>
+            <p>	9	GUILHERME AUGUSTO DA SILVA	</P>
+            <p>	9	GUILHERME ALEXANDRE FERREIRA	</P>
+            <p>	10	GUSTAVO DOS REIS LEMOS	</P>
+            <p>	10	GUSTAVO HENRIQUE VIEIRA ALVES	</P>
+            <p>	11	ISABELLE VICTÓRIA DA SILVA CARVALHO	</P>
+            <p>	11	JAQUELINE PEREIRA SANTOS	</P>
+            <p>	12	ISADORA DE OLIVEIRA GRACIANO	</P>
+            <p>	13	LARA APARECIDA DE SOUZA ARAUJO	</P>
+            <p>	13	JOÃO GABRIEL CARVALHO SILVA	</P>
+            <p>	14	KAUÃ RAFAEL GOMES DOS SANTOS BALBINO	</P>
+            <p>	14	LUKA LEONE SILVESTRE FIGUEIREDO AGOSTINHO	</P>
+            <p>	15	KELLEY GABRIELLY DA SILVA PIRES	</P>
+            <p>	16	LUÍS ROBERTO DA SILVA CAETANO	</P>
+            <p>	27	TIAGO HENRIQUE DA SILVA PRADO	</P>
+            <p>	29	YASMIN VITÓRIA DE PAULA BARBOSA	</P>
+      </main>
     <footer>
         <p>Desenvolvido por <a href="https://www.duarterc.eu.org/site/" target="_blank">Professor Reinaldo</a></p>
     </footer>
