criação da home
Texto aleatório

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
     </nav>
    
     <main>
-        Sala
+        <h2>Ementa:</h2>
+        <p>O uso da tecnologia em sala de aula é cada vez mais frequente a sua importância reflete a necessidade de aplicar isso no cotidiano do estudante tanto para aprender quanto para se colocar na vida em sociedade e por fim no mercado de trabalho.</p> 
+        <p>Assim aplicar a tecnologia de forma lúdica, mas com aprofundamento na construção de um site com o uso de HTML + CSS e alguns passos de programação com o uso de JavaScript. Abordando uma linguagem clara e evitando cair em uma noção errada da realidade que estão espalhadas na web.</p>
+         <p> O fator motivador foi a possibilidade de fazer a diferença a curto prazo nas carreiras dos estudantes.</p> 
+         <p> Sei que este tipo de conhecimento tem alta demanda no mercado, não somente para vagas específicas de mídia digital, mas também de comunicação visual.</p>
+        <p>  Por este motivo, sinto que ofereço um benefício prático imediato aos estudantes, diferentemente da disciplina do currículo escolar, cujo impacto, por maior ou mais importante que seja, é mais difícil de mensurar.</p>
+        <h2> Objetivos:</h2>
+        <p> O papel do designer será sempre, num âmbito geral, tornar melhores as vidas das pessoas. Frente aos avanços tecnológicos, isto significa realizar a interface entre a frieza dos sistemas de informação e as emoções do ser humano. Vivemos numa época em que computadores e sistemas são parte indissociável de nossas vidas. Cada vez mais as pessoas se habituam a conviver com a tecnologia digital e consequentemente, aumentam suas expectativas em relação a ela.</p>
+        <p> Cabe ao designer compreender estas expectativas, projetando experiências positivas, inclusivas e recompensadoras em meio às idiossincrasias dos meios digitais. </p>
+        <p> A World Wide Web(WWW) completou 30 anos e já se consolidou como uma rede de informações e serviços essenciais para a sociedade. No entanto, a “Internet das coisas ”(IoT) está logo ali, no futuro próximo, e já promete tornar a vida do designer cada vez mais complexa, ao demandar que se idealizem experiências para um número cada vez maior de dispositivos e contextos.</p>
+        
     </main>
     <footer>
         <p>Desenvolvido por <a href="https://www.duarterc.eu.org/site/" target="_blank">Professor Reinaldo</a></p>
