Correção de link
Agora vai

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </Header>
     <nav>
         <a href="https://marx-color.github.io/ProjetoCasa/index.html">Sala</a>
-        <a href="https://marx-color.github.io/Cordel/">Cordel target="_blank"</a>
+        <a href="https://marx-color.github.io/Cordel/"  target="_blank">Cordel</a>
         <a href="https://marx-color.github.io/ProjetoCasa/contato.html">Estudantes</a>
     </nav>
    
@@ -31,7 +31,7 @@
         <p> O papel do designer será sempre, num âmbito geral, tornar melhores as vidas das pessoas. Frente aos avanços tecnológicos, isto significa realizar a interface entre a frieza dos sistemas de informação e as emoções do ser humano. Vivemos numa época em que computadores e sistemas são parte indissociável de nossas vidas. Cada vez mais as pessoas se habituam a conviver com a tecnologia digital e consequentemente, aumentam suas expectativas em relação a ela.</p>
         <p> Cabe ao designer compreender estas expectativas, projetando experiências positivas, inclusivas e recompensadoras em meio às idiossincrasias dos meios digitais. </p>
         <p> A World Wide Web(WWW) completou 30 anos e já se consolidou como uma rede de informações e serviços essenciais para a sociedade. No entanto, a “Internet das coisas ”(IoT) está logo ali, no futuro próximo, e já promete tornar a vida do designer cada vez mais complexa, ao demandar que se idealizem experiências para um número cada vez maior de dispositivos e contextos.</p>
-        
+
     </main>
     <footer>
         <p>Desenvolvido por <a href="https://www.duarterc.eu.org/site/" target="_blank">Professor Reinaldo</a></p>
